[package]
authors = ["Jorge D. Ortiz-Fuentes <jorge.ortiz-fuentes@mongodb.com>"]
name = "lazycoder"
description = "Simple snippet provider for espanso."
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.0.13", features = ["derive"] }
directories = "^4.0.1"
serde = "^1.0"
serde_derive = "^1.0"
toml = "^0.5.8"
