[package]
authors = ["Jorge D. Ortiz-Fuentes <jorge.ortiz-fuentes@mongodb.com>"]
name = "lazycoder"
description = "Simple snippet provider for espanso."
version = "0.7.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.3.21", features = ["derive"] }
directories = "^5.0.1"
env_logger = "0.10.1"
log = "0.4.20"
mockall_double = "0.3.1"
serde = "^1.0"
serde_derive = "^1.0"
toml = "^0.7.6"

[dev-dependencies]
mockall = "0.13.0"
tempfile = "3.12.0"
