[package]
authors = ["Jorge D. Ortiz-Fuentes <jdortiz@gmail.com>"]
name = "lazycoder"
description = "Simple snippet provider for espanso."
version = "0.7.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.5", features = ["derive"] }
directories = "~6.0"
env_logger = "~0.11"
eyre = "0.6.12"
log = "~0.4"
mockall_double = "~0.3"
serde = "^1.0"
serde_derive = "^1.0"
toml = "~0.8"

[dev-dependencies]
mockall = "~0.13"
tempfile = "~3.20"
